fix: add z-index to navbar content

--- a/frontend/dashboard/components/Navbar/Navbar.css
+++ b/frontend/dashboard/components/Navbar/Navbar.css
@@ -50,6 +50,7 @@
   transition: left 0.7s ease-in-out;
   background-color: #ffffff;
   height: calc(100vh - 92px);
+  z-index: 1;
 }
 
 .navbar-list.active {
